--- a/_posts/2015-07-27-0.10_release.markdown
+++ b/_posts/2015-07-27-0.10_release.markdown
@@ -4,7 +4,9 @@ title:  "released Version 0.10 "
 date:   2015-07-27 14:31:00
 categories: init
 author: "Palo van Dalo"
-abstract: "This is why I couldn't create updates for Stepp0r"
+abstract: "My new Plugin for renoise, to feedback renoise changes to the a MIDI Controller"
 ---
+
+This plugin is the reason why I haven't released anything for [Stepp0r](http://mrvandalo.github.io/stepp0r/) for a while.
 
 Have a look at the [Documentation]( {{ site.baseurl }}/documentation/ ) on how to use it.
